--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "start:dev": "nodemon --watch"
+    "start:dev": "nodemon --watch",
+    "demon": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -22,23 +23,9 @@
     "nodemon": "^2.0.13"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.5.0",
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "connect-flash": "^0.1.1",
-    "connect-mongodb-session": "^3.1.1",
-    "cors": "^2.8.5",
-    "csurf": "^1.11.0",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "express-handlebars": "^3.1.0",
-    "express-session": "^1.17.2",
-    "express-validator": "^6.13.0",
-    "mongodb": "^4.1.3",
-    "mongoose": "^6.0.10",
-    "nodemailer": "^6.7.0",
-    "nodemailer-sendgrid-transport": "^0.2.0",
-    "pug": "^3.0.2"
+    "express": "^4.17.1"
   }
 }
