--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
@@ -31,6 +33,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "express-validator": "^6.13.0",
     "mongoose": "^6.0.12"
   }
 }
