--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.13.0",
     "mongoose": "^6.0.12",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "nodemailer": "^6.7.2",
+    "nodemailer-sendgrid-transport": "^0.2.0"
   }
 }
